<?xml version="1.0"?>
<package>
  <name>drchubo_v2_ikfast</name>
  <version>0.0.0</version>
  <description>The drchubo_v2_ikfast package that uses IKFast solvers for the drchubo v2 model. This package is a modified copy of drchubo_ikfast package written by Calder Phillips-Grafflin.</description>
  <maintainer email="benersuay@hotmail.com">Bener Suay</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
